<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_value_ET"
        android:padding="30dp"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/first_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/second_value_ET"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:padding="30dp"
        android:hint="@string/second_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_Btn"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_weight="1"
            android:text="@string/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sub_Btn"
            android:layout_weight="1"
            android:textSize="20sp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mul_Btn"
            android:textSize="20sp"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/mul_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/div_Btn"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_weight="1"
            android:text="@string/div_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/result_View"
        android:padding="40dp"
        android:gravity="center"
        android:textSize="30sp"
        android:hint="@string/result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


</LinearLayout>
